diesel-builders/tests/ui/missing_const_validator_error.stderr
error[E0425]: cannot find function `validate_stock` in this scope
  --> tests/ui/missing_const_validator_error.rs:30:29
   |
30 |     #[table_model(default = 10)]
   |                             ^^ not found in this scope
